src/test/deca/extension/context/invalid/wrong_type.deca
// Wrong type : int != float

{
    int[][] a = {{2, -1.0, 0}, {-1, 2, -1}, {0, -1, 2}};
}